hphp/hack/test/typecheck/dynamic/mixed_isnt_dynamic/contravariant.php.like_types.exp
File "contravariant.php", line 17, characters 7-8:
Invalid argument (Typing[4110])
File "contravariant.php", line 5, characters 14-30:
Expected ~Foo<mixed, mixed> because it is an unenforceable type
File "contravariant.php", line 16, characters 12-14:
But got Foo<dynamic, mixed>
